--- a/style.css
+++ b/style.css
@@ -1472,6 +1472,11 @@ body #actividad {
 #actividad .carousel-inner .item-container {
   border-radius: 15px;
 }
+/*Slides concatenadas*/
+#actividad .carousel-inner .item-container .slide-concatenate .class_slide {
+  border-radius: 0;
+  margin: 1rem  0;
+}
 
 
 /*Botón cierre iframe*/
@@ -2418,6 +2423,16 @@ que sí necesitan una altura mínima*/
 }
 #actividad .player.video:hover {
   box-shadow: 0 0 0 5px var(--MainColor);
+}
+
+/* Ajustes imagenes */
+/*Cambio en el logo*/
+.zoom_flag_img {
+  background-color: var(--MainColor);
+}
+/*Eliminamos el padding de las imágenes con zoom*/
+.bck-i-fullscreen-wrapper {
+  padding: 0;
 }
 
 /*ACTIVIDADES*/
